updated badges page

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -187,7 +187,7 @@
             <div class="developSkillbadgetextdiv">
                 <p>
                     <strong>CloudSpokes Adventurer</strong><br>
-                    You can thrive and conquer any journey! Awarded for winning at least five contests</p>
+                    You can thrive and conquer any journey! Awarded for winning at least five contests.</p>
                     
             </div>
             <div class="developSkillbadgeimgdiv">
@@ -281,7 +281,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Force.com Adventurer</strong> - Awarded for winning at least five contests.</p>
+                            <strong>Force.com Adventurer</strong> - Awarded for winning at least five contests involving or using <a href="http://force.com">force.com.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -291,7 +291,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Force.com Ninja</strong> - You are not to be trifled with ! Awarded for
-                            winning at least ten contests.</p>
+                            winning at least ten contests involving or using <a href="http://force.com">force.com.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -316,7 +316,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Heroku Traveler</strong> - Awarded for placing in at least one contest  involving or using Heroku.</p>
+                            <strong>Heroku Traveler</strong> - Awarded for placing in at least one contest involving or using Heroku.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Heroku Adventurer</strong> - Awarded for winning at least five contests .</p>
+                            <strong>Heroku Adventurer</strong> - Awarded for winning at least five contests involving or using Heroku.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -335,7 +335,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Heroku Ninja</strong> - There is nothing silent about your skills ! Awarded
-                            for winning at least ten contests.</p>
+                            for winning at least ten contests involving or using Heroku.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -371,7 +371,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Appengine Adventurer</strong> - Awarded for winning at least five contests.</p>
+                            <strong>Appengine Adventurer</strong> - Awarded for winning at least five contests involving or using Appengine.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -381,7 +381,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Appengine Ninja</strong> - With your skills you’re sneaking up on no one!
-                            Awarded for winning at least ten contests.</p>
+                            Awarded for winning at least ten contests involving or using Appengine.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -416,7 +416,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>AWS Adventurer</strong> - Awarded for winning at least five contests .</p>
+                            <strong>AWS Adventurer</strong> - Awarded for winning at least five contests involving or using AWS.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -426,7 +426,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>AWS Ninja</strong> - Your use of many weapons is most impressive. Awarded
-                            for winning at least ten contests.</p>
+                            for winning at least ten contests involving or using AWS.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -461,7 +461,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>UI Adventurer</strong> - Awarded for winning in at least five contests  substantially using HTML5 and/or Javascript.</p>
+                            <strong>UI Adventurer</strong> - Awarded for winning in at least five contests substantially using HTML5 and/or Javascript.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -471,7 +471,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>UI Ninja</strong> - You are amongst the rarest of a lost but resurgent art.
-                            Awarded for winning at least ten contests.</p>
+                            Awarded for winning at least ten contests substantially using HTML5 and/or Javascript.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -518,7 +518,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Apple I Ninja</strong> - You bring together the steak and sizzle to change
-                            the lives of users everywhere. Awarded for winning at least ten contests.</p>
+                            the lives of users everywhere. Awarded for winning at least ten contests using or related to iOS.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -565,7 +565,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Android Ninja</strong> - Even at the geek conferences your skills standout
-                            ! Awarded for winning at least ten contests.</p>
+                            ! Awarded for winning at least ten contests using or related to Android.</p>
                     </div>
                     <div class="cl">
                     </div>
