fix: closed an unclosed tag

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -281,7 +281,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Force.com Adventurer</strong> - Awarded for winning at least five contests involving or using <a href="http://force.com">force.com.</p>
+                            <strong>Force.com Adventurer</strong> - Awarded for winning at least five contests involving or using <a href="http://force.com">force.com</a>.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -291,7 +291,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Force.com Ninja</strong> - You are not to be trifled with ! Awarded for
-                            winning at least ten contests involving or using <a href="http://force.com">force.com.</p>
+                            winning at least ten contests involving or using <a href="http://force.com">force.com</a>.</p>
                     </div>
                     <div class="cl">
                     </div>
