decided to remove links from force.com text, fixed some typos

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -250,8 +250,7 @@
             <div class="fl">
                 <div id="rolloverPopupForce" class="divBadgespopUp" style="display: block;">
                     <div>
-                        <strong>Force.com</strong> - Leading cloud platform for business apps from <a href="http://salesforce.com">
-                            salesforce.com</a> .
+                        <strong>Force.com</strong> - Leading cloud platform for business apps from salesforce.com.
                     </div>
                     <div style="float: left; width: 150px;">
                         <img src="http://cloudspokes.s3.amazonaws.com/force_spoker.gif">
@@ -260,8 +259,7 @@
                         <p>
                             <strong>Force.com Follower</strong> - Begin your journey to “use the force” to make
                             the impossible real. Awarded for  submitting an acceptable
-                            entry (at least 70% score) on a challenge using or related to <a href="http://force.com">
-                                force.com.</a>
+                            entry (at least 70% score) on a challenge using or related to force.com.
                         </p>
                     </div>
                     <div class="cl">
@@ -272,7 +270,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Force.com Traveler</strong> - Awarded for placing in at least one contest
-                            involving or using <a href="http://force.com">force.com.</a></p>
+                            involving or using force.com.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -281,7 +279,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Force.com Adventurer</strong> - Awarded for winning at least five contests involving or using <a href="http://force.com">force.com</a>.</p>
+                            <strong>Force.com Adventurer</strong> - Awarded for winning at least five contests involving or using force.com.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -290,8 +288,8 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Force.com Ninja</strong> - You are not to be trifled with ! Awarded for
-                            winning at least ten contests involving or using <a href="http://force.com">force.com</a>.</p>
+                            <strong>Force.com Ninja</strong> - You are not to be trifled with!  Awarded for
+                            winning at least ten contests involving or using force.com.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -334,7 +332,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Heroku Ninja</strong> - There is nothing silent about your skills ! Awarded
+                            <strong>Heroku Ninja</strong> - There is nothing silent about your skills!  Awarded
                             for winning at least ten contests involving or using Heroku.</p>
                     </div>
                     <div class="cl">
@@ -397,7 +395,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Beanstalker </strong>- Your climbing up to take down the giant and reap
-                            the rewards of cloud greatness ! Awarded for  submitting
+                            the rewards of cloud greatness!  Awarded for  submitting
                             an acceptable entry (at least 70% score) on a challenge using or related to AWS.</p>
                     </div>
                     <div class="cl">
@@ -425,7 +423,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>AWS Ninja</strong> - Your use of many weapons is most impressive. Awarded
+                            <strong>AWS Ninja</strong> - Your use of many weapons is most impressive.  Awarded
                             for winning at least ten contests involving or using AWS.</p>
                     </div>
                     <div class="cl">
@@ -442,7 +440,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>UI Zen</strong> - Seeing the Feng shui of user experience is a noble goal.
-                            Awarded for  submitting an acceptable entry (at least
+                            Awarded for submitting an acceptable entry (at least
                             70% score) on a challenge using or related to HTML5/JS.</p>
                     </div>
                     <div class="cl">
@@ -470,7 +468,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>UI Ninja</strong> - You are amongst the rarest of a lost but resurgent art.
+                            <strong>UI Ninja</strong> - You are amongst the rarest of a lost but resurgent art. 
                             Awarded for winning at least ten contests substantially using HTML5 and/or Javascript.</p>
                     </div>
                     <div class="cl">
@@ -487,7 +485,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>“Eye” Everything </strong>- You can see the power to consumer style enjoyment
-                            to enterprise mobile. Awarded for  submitting an acceptable
+                            to enterprise mobile. Awarded for submitting an acceptable
                             entry (at least 70% score) on a challenge using or related to iOS.</p>
                     </div>
                     <div class="cl">
@@ -497,7 +495,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Apple I Traveler</strong> - Awarded for  submitting
+                            <strong>Apple I Traveler</strong> - Awarded for submitting
                             an acceptable entry (at least 70% score) on a challenge using or related to iOS.</p>
                     </div>
                     <div class="cl">
@@ -518,7 +516,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Apple I Ninja</strong> - You bring together the steak and sizzle to change
-                            the lives of users everywhere. Awarded for winning at least ten contests using or related to iOS.</p>
+                            the lives of users everywhere.  Awarded for winning at least ten contests using or related to iOS.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -534,7 +532,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>DroidHead</strong> - Trick out your device and get ready to rumble with
-                            the coolest technologies. Awarded for  submitting an
+                            the coolest technologies. Awarded for submitting an
                             acceptable entry (at least 70% score) on a challenge using or related to Android.</p>
                     </div>
                     <div class="cl">
@@ -544,7 +542,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Android Traveler</strong> - warded for  submitting
+                            <strong>Android Traveler</strong> - Awarded for submitting
                             an acceptable entry (at least 70% score) on a challenge using or related to Android.</p>
                     </div>
                     <div class="cl">
@@ -565,7 +563,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Android Ninja</strong> - Even at the geek conferences your skills standout
-                            ! Awarded for winning at least ten contests using or related to Android.</p>
+                            !  Awarded for winning at least ten contests using or related to Android.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -628,7 +626,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>CloudSmith </strong>- Knights and Ninjas appreciate your desire to forge
-                            our future tools ! Awarded for  submitting an acceptable
+                            our future tools!  Awarded for  submitting an acceptable
                             entry (at least 70% score) on a challenge using or related to Cloud Foundry.</p>
                     </div>
                     <div class="cl">
@@ -659,7 +657,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>Cloud Foundry Ninja</strong> - Your code cuts through things like a throwing
-                            star! Awarded for winning at least ten contests.</p>
+                            star!  Awarded for winning at least ten contests.</p>
                     </div>
                     <div class="cl">
                     </div>
