added box badges

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -568,53 +568,51 @@
                     <div class="cl">
                     </div>
                 </div>
-				<!--
-                <div id="rolloverPopupTwilio" class="divBadgespopUp">
+
+                <div id="rolloverPopupBox" class="divBadgespopUp">
                     <div>
-                        <strong>Twilio </strong>- Twilio is an API based telephony stack providing voice and SMS protocols over a simple REST interface.
+                        <strong>Box</strong>- The Box API is fully customizable: Build applications to add unique functionality, develop new workflows, highlight your brand and more.
                     </div>
                     <div style="float: left; width: 150px;">
-                        <img src="http://cloudspokes.s3.amazonaws.com/twilio.gif">
+                        <img src="http://cloudspokes.s3.amazonaws.com/boxer.png">
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Twilio Talker</strong> - You really know how to get the word out! Awarded for submitting an
-                            acceptable entry (at least 70% score) on a challenge using or related to Twilio.</p>
+                            <strong>Boxer</strong> - You're ready to build knock-out apps! Awarded for creating a Box account and creating a Box API Key.</p>
                     </div>
                     <div class="cl">
                     </div>
                     <div style="float: left; width: 150px;">
-                        <img src="http://cloudspokes.s3.amazonaws.com/twilio_traveler.gif">
+                        <img src="http://cloudspokes.s3.amazonaws.com/box-traveler.png">
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Twilio Traveler</strong> - warded for and submitting
-                            an acceptable entry (at least 70% score) on a challenge using or related to Twilio.</p>
+                            <strong>Box Traveler</strong> - awarded for submitting
+                            an acceptable entry (at least 70% score) on a challenge using or related to Box.</p>
                     </div>
                     <div class="cl">
                     </div>
                     <div style="float: left; width: 150px;">
-                        <img src="http://cloudspokes.s3.amazonaws.com/twilio_adventurer.gif">
+                        <img src="http://cloudspokes.s3.amazonaws.com/box-adventurer.png">
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Twilio Adventurer</strong> - Awarded for winning in at least five contests
-                             using or related to Twilio.</p>
+                            <strong>Box Adventurer</strong> - Awarded for winning at least five contests
+                             using or related to Box.</p>
                     </div>
                     <div class="cl">
                     </div>
                     <div style="float: left; width: 150px;">
-                        <img src="http://cloudspokes.s3.amazonaws.com/twilio_ninja.gif">
+                        <img src="http://cloudspokes.s3.amazonaws.com/box-ninja.png">
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Twilio Ninja</strong> - In a connected world, you really know how to communicate
-                            ! Awarded for winning at least ten contests.</p>
+                            <strong>Box Ninja</strong> - You have mastered the art of Box-Fu!  Awarded for winning at least ten contests.</p>
                     </div>
                     <div class="cl">
                     </div>
                 </div>
-				-->
+
                 <div id="rolloverPopupCloudFoundry" class="divBadgespopUp">
                     <div>
                         <strong>Cloud Foundry </strong>- Open platform as a service project initiated by
