forgot to enable rollover

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -22,7 +22,7 @@
             $('#rolloverPopupAndroid').hide();
             $('#rolloverPopupCloudFoundry').hide();
             
-            $('#rolloverPopupTwilio').hide();
+            $('#rolloverPopupBox').hide();
             $('#aForce').children().css('border', '0')
             $('#aIOS').children().css('border', '0')
             $('#aHTML5').children().css('border', '0')
@@ -31,7 +31,7 @@
             $('#aAWS').children().css('border', '0')
             $('#aAppengine').children().css('border', '0')
 
-            $('#aTwilio').children().css('border', '0')
+            $('#aBox').children().css('border', '0')
         }
 
 
@@ -90,7 +90,7 @@
 
         });
         
-        $('#aTwilio').hover(function () {
+        $('#aBox').hover(function () {
             hidealldivs();
             $(this).children().css('border', '1px solid #000000');
             var href = $(this).attr('href');
@@ -242,6 +242,10 @@
                 <div class="technologyBadgesdiv">
                     <a href="#rolloverPopupAndroid" id="aAndroid" rel="aAndroid" class="techbadgesA">
                         <img border="0" src="http://cloudspokes.s3.amazonaws.com/logo_droid.jpg" /></a>
+                </div>
+                <div class="technologyBadgesdiv">
+                    <a href="#rolloverPopupBox" id="aBox" rel="aBox" class="techbadgesA">
+                        <img border="0" src="http://cloudspokes.s3.amazonaws.com/twilio.jpg" /></a>
                 </div>
                 <div class="cl">
                 </div>
