replaced twilio logo with box logo

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -245,7 +245,7 @@
                 </div>
                 <div class="technologyBadgesdiv">
                     <a href="#rolloverPopupBox" id="aBox" rel="aBox" class="techbadgesA">
-                        <img border="0" src="http://cloudspokes.s3.amazonaws.com/twilio.jpg" /></a>
+                        <img border="0" src="http://cloudspokes.s3.amazonaws.com/box.png" /></a>
                 </div>
                 <div class="cl">
                 </div>
