fixed some text

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -499,8 +499,8 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Apple I Traveler</strong> - Awarded for submitting
-                            an acceptable entry (at least 70% score) on a challenge using or related to iOS.</p>
+                            <strong>Apple I Traveler</strong> - Awarded for placing in at least one contest
+                             using or related to iOS.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -575,7 +575,7 @@
 
                 <div id="rolloverPopupBox" class="divBadgespopUp">
                     <div>
-                        <strong>Box</strong>- The Box API is fully customizable: Build applications to add unique functionality, develop new workflows, highlight your brand and more.
+                        <strong>Box</strong>- The Box platform allows you to integrate, customize, and build innovative apps on Box.
                     </div>
                     <div style="float: left; width: 150px;">
                         <img src="http://cloudspokes.s3.amazonaws.com/boxer.png">
@@ -591,8 +591,8 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>Box Traveler</strong> - awarded for submitting
-                            an acceptable entry (at least 70% score) on a challenge using or related to Box.</p>
+                            <strong>Box Traveler</strong> - Awarded for placing in at least one contest
+                             using or related to Box.</p>
                     </div>
                     <div class="cl">
                     </div>
