added Box badges to badges.html.erb

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -750,7 +750,7 @@
                         <strong>Cloud Foundry Blacksmith </strong>
                         <br />
                         Get this badge by completing a real world programming exercise that uses multiple
-                        features of Cloud Foundry, incorporates third party libraries and connects to various
+                        features of Cloud Foundry, incorporates third party libraries, and connects to various
                         social networks.</p>
                 </div>
                 <div class="cl">
