--- a/app/views/members/recommend.html.erb
+++ b/app/views/members/recommend.html.erb
@@ -4,7 +4,7 @@
 	<%= flash_messages %>
 	<% if flash[:error].nil? %>
 		<div class="post-submission">
-		    <h3>Post a Recommendation</h3>
+		    <h3>Post A Recommendation</h3>
 		    <fieldset>
 			<%= form_for :recommendation, :url => recommend_member_new_path do |f| %>
 				<div class="holder">
