--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -21,4 +21,6 @@
         = render "recommendation", :recommendation => recommendation
       = will_paginate @recommendations
 
+    .profile
+      = render "badgeProfile"
   = render "member-sidebar"
