--- a/app/views/members/_badgeProfile.html.erb
+++ b/app/views/members/_badgeProfile.html.erb
@@ -1,4 +1,8 @@
-<div class="bv_playerProfile" bv_options='{"showActivities":true,"showRewards":true}' style=""></div>
+<!-- <div class="bv_playerProfile" bv_options='{"showActivities":true,"showRewards":true}' style=""></div> -->
+<div class="bv_activitiesFeed" bv_options='{"feedInterval":2}'/> 
+<br/>
+<!-- style="width:300px;height:500px;"></div> -->
+  
   <script>
     window.BadgevilleAsynchInit = function() {
       Badgeville.extend( Badgeville.Settings, {
