--- a/app/views/members/_member-sidebar.html.haml
+++ b/app/views/members/_member-sidebar.html.haml
@@ -51,6 +51,8 @@
         = number_to_currency(@member["Total_Money__c"], :precision => 0)
         %strong Total Money
   .achievements
+    = render "badgeProfile"
+
   %h3 Social
   .socials
     %ul
