--- a/app/assets/stylesheets/challenge.css
+++ b/app/assets/stylesheets/challenge.css
@@ -693,3 +693,49 @@ span.job, span.stats {
 	border-bottom: 1px solid #ccc;
 	padding: 6px 8px;
 }
+
+#survey label {
+    display: inline;
+    line-height: 28px;
+    margin-right: 6px;
+    text-align: right;
+    width: 120px;	
+}
+#survey textarea {
+    color: #666666;
+    display: block;
+    font-size: 14px;
+    height: 84px;
+    width: 525px;
+    font-size: 13px;
+    padding: 6px 5px;
+    margin-bottom: 10px;	
+	margin-left: 10px;
+}
+#survey .spacer {
+	padding-bottom: 25px;
+}
+#survey input {
+    background: none repeat scroll 0 0 #FFFFFF;
+    border: 1px solid #CCCCCC;
+    font: 11px Arial,Sans-Serif;
+    display: inline;
+    font-size: 13px;
+    color: #666666;
+	margin-left: 15px;
+}
+#survey .field {
+    margin-bottom: 10px;
+    padding: 6px 5px;
+    width: 150px;
+    height: 16px;
+}
+#survey .txt {
+    margin-bottom: 10px;
+    padding: 6px 5px;
+    width: 120px;
+    height: 16px;
+}
+#survey .display {
+    padding: 6px 5px;
+}
