requried signin before seeing button

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -68,7 +68,9 @@
 		                    </div>
 						<% end %>
 					<% else %>
-						<a class="button fl" href="<%= submission_view_only_url(@challenge_detail["Challenge_Id__c"]) %>"><span>View Your Submission</span></a>
+						<% if signed_in? && @participation_status[:status].eql?('Submitted')%>
+							<a class="button fl" href="<%= submission_view_only_url(@challenge_detail["Challenge_Id__c"]) %>"><span>View Your Submission</span></a>
+						<% end %>
 					<% end %>
 
                 </div><br/><br/>
