fixed view_all logic

--- a/app/views/challenges/submission_view_only.html.erb
+++ b/app/views/challenges/submission_view_only.html.erb
@@ -30,6 +30,8 @@
 								<% end %>
 						    </tbody>
 						</table>
+					<% else %>
+						<p><br/>No files, URLs and other links were found for your challenge submission.</p>
 					<% end %>
 					
                 </div>
