--- a/app/views/challenges/survey.html.erb
+++ b/app/views/challenges/survey.html.erb
@@ -11,7 +11,10 @@
 
 					<p>Thank you for participating in this challenge! 
 						We are trying to gather feedback about the challenge process to continue to make it better 
-						for everyone. <% if signed_in? %>If you wish to remain anonymous, simply logout before filling out this survey.<% end %></p>
+						for everyone. <% if signed_in? %>If you wish to remain anonymous, simply logout before filling out this survey.
+						However, we'd <b><u>really</u></b> like to know who you are when submitting the survey. If you have any good ideas, we'd
+						like to follow up with you on them. And if you have any complaints, we'd certainly like the chance to address them
+						with you. However, we won't be able to do either of these if you log out and submit anonymously.<% end %></p>
 						
 						<div id="survey">
 							<%= form_for survey_path, :name => "survey", :method => "post" do |f| %>
